small temporary fix for stats page on mobile

--- a/sass/activatoradmin.scss
+++ b/sass/activatoradmin.scss
@@ -299,6 +299,9 @@ body {
 }
 
 /* stats */
+.statsActivated {
+  overflow: hidden;
+}
 .bar {
   fill: steelblue;
 
